# sol-pool-watcher

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  arb-config.toml  pool-watcher.toml  tg-config.toml  tg-publisher.toml
crates/common_types/: Cargo.toml
crates/common_types/src/: lib.rs
crates/file_sink/: Cargo.toml
crates/file_sink/src/: lib.rs
crates/hype_score/: Cargo.toml
crates/hype_score/src/: lib.rs
crates/liq_metrics/: Cargo.toml
crates/liq_metrics/src/: lib.rs
crates/pool_watcher/: Cargo.toml  bus.rs  service.rs  token.rs
crates/pool_watcher/src/: token.rs
crates/pool_watcher/src/decoders/: mod.rs
crates/pool_watcher/tests/: decoder.rs  token_provider.rs
crates/tg_publisher/: Cargo.toml
crates/tg_publisher/src/: lib.rs  markdown.rs
crates/token-safety-inspector/: Cargo.toml
crates/token-safety-inspector/crates/token_safety/src/: policy.rs  sim.rs
crates/token-safety-inspector/crates/token_safety_cli/src/: main.rs
crates/token_decode/: Cargo.toml
crates/token_decode/src/: lib.rs  test_fixtures.rs  tests.rs
crates/token_safety/: Cargo.toml  README.md
crates/token_safety/crates/token_safety/src/: lib.rs  mint_reader.rs
crates/token_safety/crates/token_safety_cli/: Cargo.toml
crates/token_safety/src/: extensions.rs
docs/: pool_token_bundle.schema.json
src/: arb-notify.rs  inventory.rs  lib.rs  service.rs  tg-publisher.rs  token.rs  types.rs
src/decoders/: mod.rs  orca_whirl.rs  raydium_clmm.rs
tests/: arb_notify_integration.rs  bus.rs  decoder.rs  tg_publisher.rs  tg_publisher_config.example.toml  token_provider.rs
tg-publisher/: Cargo.toml
tg-publisher/src/: main.rs
token-safety-inspector/: README.md
token-safety-inspector/crates/token_safety/: Cargo.toml
token-safety-inspector/crates/token_safety/src/: extensions.rs  lib.rs  mint_reader.rs  report.rs
token-safety-inspector/crates/token_safety_cli/: Cargo.toml
token-safety-inspector/crates/token_safety_http/: Cargo.toml
token-safety-inspector/crates/token_safety_http/src/: main.rs
