[package]
name = "pool_watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
tracing = "0.1"
solana-sdk = "3.0.0"
solana-client = "3.0.0"
solana-account-decoder = "3.0.0"
bs58 = "0.5"
base64 = "0.22"
once_cell = "1"
solana-commitment-config = "3.0.0"
clap = { version = "4", features = ["derive"] }
toml = "0.9"
futures = "0.3"
token_safety = { path = "token-safety-inspector/crates/token_safety" }

[dev-dependencies]
spl-token = "8"

[[bin]]
name = "pool-watcher"
path = "src/bin/pool-watcher.rs"

[workspace]
members = [
    ".",
    "crates/common_types",
    "crates/token_decode",
    "crates/tg_publisher",
    "crates/liq_metrics",
    "crates/hype_score",
]
