[workspace]
members = [
    "crates/pool_watcher",
    "crates/common_types",
    "crates/token_decode",
    "crates/tg_publisher",
    "crates/liq_metrics",
    "crates/hype_score",
    "crates/file_sink",
    "crates/token-safety-inspector/crates/token_safety",
]
resolver = "2"

[workspace.package]
edition = "2021"
