[package]
name = "file_sink"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "time", "sync"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["std"] }

[dev-dependencies]
tempfile = "3"
serde_json = "1"
