[package]
name = "pool_watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
tracing = "0.1"
solana-sdk = "3"
solana-client = "3"
solana-account-decoder = "3"
bs58 = "0.5"
base64 = "0.22"
once_cell = "1"
solana-commitment-config = "3"
clap = { version = "4", features = ["derive"] }
toml = "0.9"
futures = "0.3"
token_decode = { path = "../token_decode" }
liq_metrics = { path = "../liq_metrics" }
hype_score = { path = "../hype_score" }
tg_publisher = { path = "../tg_publisher" }
file_sink = { path = "../file_sink" }
lru = "0.10"
common_types = { path = "../common_types" }
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[dev-dependencies]

[[bin]]
name = "pool-watcher"
path = "src/bin/pool-watcher.rs"

[[bin]]
name = "arb-notify"
path = "bin/arb-notify.rs"

[features]
token-tests = []
