[package]
name = "tg_publisher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
tracing = "0.1"
solana-sdk = "3"
solana-client = "3"
solana-account-decoder = "3"
bs58 = "0.5"
base64 = "0.22"
once_cell = "1"
solana-commitment-config = "3"
clap = { version = "4", features = ["derive"] }
toml = "0.9"
futures = "0.3"
token_decode = { path = "crates/token_decode" }
liq_metrics = { path = "crates/liq_metrics" }
hype_score = { path = "crates/hype_score" }
tg_publisher = { path = "crates/tg_publisher" }
file_sink = { path = "crates/file_sink" }
lru = "0.10"
common_types = { path = "crates/common_types" }
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[dev-dependencies]
