[package]
name = "pool_watcher"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
anyhow = "1"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
solana-sdk = "3"
solana-client = "3"
solana-account-decoder = "3"
solana-commitment-config = "3"
base64 = "0.22"
once_cell = "1"
futures = "0.3"
