[package]
name = "tg_publisher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread","macros","time","sync"] }
tracing = "0.1"
reqwest = { version = "0.11", features = ["json","gzip","brotli","rustls-tls","multipart"] }
common_types = { path = "../common_types" }
solana-sdk = "1.18"
