[package]
name = "token_decode"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
solana-sdk = "1.18"
solana-client = "1.18"
solana-account-decoder = "1.18"
spl-token = { version = "4", default-features = false, features=["no-entrypoint"] }
spl-token-2022 = { version = "0.6", default-features = false, features=["no-entrypoint"] }
common_types = { path = "../common_types" }
