[package]
name = "token_decode"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features=["derive"] }
solana-sdk = "3.0.0"
solana-client = "3.0.0"
solana-account-decoder = "3.0.0"
spl-token = "8"
spl-token-2022 = "3"
common_types = { path = "../common_types" }

[dev-dependencies]
tokio = { version="1", features=["macros"] }
