[package]
name = "token_decode"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features=["derive"] }
solana-sdk = "3"
solana-client = "3"
common_types = { path = "../common_types" }
token_safety = { path = "../token-safety-inspector/crates/token_safety" }

[dev-dependencies]
tokio = { version="1", features=["macros"] }
spl-token = "8"
spl-token-2022 = "9"

[features]
token-tests = []
