[package]
name = "token_safety"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
solana-sdk = "3"
solana-client = "3"
solana-account-decoder = "3"
spl-token = "8"
serde_json = "1"
tokio = { version = "1", features=["macros","rt"] }
