[package]
name = "token_safety_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features=["derive"] }
serde = { version = "1", features=["derive"] }
serde_json = "1"
solana-sdk = "3.0"
solana-client = "3.0"
tokio = { version="1", features=["rt-multi-thread","macros","time","sync"] }

[dependencies.token_safety]
path = "../token_safety"
