[package]
name = "token_safety_http"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features=["rt-multi-thread","macros","time","sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features=["env-filter","fmt"] }
solana-sdk = "3.0"
solana-client = "3.0"
prometheus = "0.14"
thiserror = "2"

# local
[dependencies.token_safety]
path = "../token_safety"

